--- a/README.Rmd
+++ b/README.Rmd
@@ -4,8 +4,11 @@ output: github_document
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
-<!-- [![Build Status](https://travis-ci.com/AdaemmerP/lpirfs.svg)](https://travis-ci.com/AdaemmerP/lpirfs) --> 
-<!-- [![Coverage Status](https://codecov.io/gh/adaemmerp/lpirfs/graph/badge.svg)](https://codecov.io/github/adaemmerp/lpirfs?branch=master)  -->
+# lpirfs [![CRAN Version](https://www.r-pkg.org/badges/version/lpirfs)](https://CRAN.R-project.org/package=lpirfs)
+[![Downloads](https://cranlogs.r-pkg.org/badges/lpirfs)](https://CRAN.R-project.org/package=lpirfs)
+[![Total Downloads](https://cranlogs.r-pkg.org/badges/grand-total/lpirfs?color=orange)](https://CRAN.R-project.org/package=lpirfs)
+[![Build Status](https://travis-ci.com/AdaemmerP/lpirfs.svg)](https://travis-ci.com/AdaemmerP/lpirfs)
+[![Coverage Status](https://codecov.io/gh/adaemmerp/lpirfs/graph/badge.svg)](https://codecov.io/github/adaemmerp/lpirfs?branch=master)
 
 ```{r setup, include = FALSE}
 knitr::opts_chunk$set(
@@ -35,6 +38,12 @@ Examples can be found [here.](https://adaemmerp.github.io/lpirfs/README_docs.htm
 
 
 ## Installation
+
+You can install the released version of **lpirfs** from [CRAN](https://CRAN.R-project.org) with:
+
+``` r
+install.packages("lpirfs")
+```
 
 You can install the development version of **lpirfs** from [GitHub](https://github.com/):
 
