- Update Rmd file

--- a/README.Rmd
+++ b/README.Rmd
@@ -20,7 +20,7 @@ knitr::opts_chunk$set(
 ```
 
 
-# lpirfs
+# About
 An R-package which estimates linear and nonlinear impulse responses
 with local projections by [Jordà (2005)](https://www.aeaweb.org/articles?id=10.1257/0002828053828518).
 
