--- a/README.Rmd
+++ b/README.Rmd
@@ -26,10 +26,33 @@ with local projections by [Jordà (2005)](https://www.aeaweb.org/articles?id=10.
 
 ## Main features
 
-- Estimates linear and nonlinear impulse responses with local projections.
+- Estimates linear and nonlinear impulse responses with local projections and .
+- Estimates linear and nonlinear impulse responses with local projections and
+  instrument variable approach (development version).
 - Functions to plot linear and nonlinear impulse responses.
 - Functions are partly implemented in *Rcpp* and *RcppArmadillo* to improve efficiency.
 - High performance with parallel computation.
+
+## Updates and new features in the development version 
+* Fixed an error in *lp_nl* when the number of lags is chosen by a lag length criterion. 
+  The version on CRAN (0.1.1) chooses lags based on linear data and not on 
+  nonlinear lagged data.
+
+* All functions now allow to include (lagged) exogenous variables and variables 
+  with exogenous data with contemporaneous impact. 
+
+* Two new functions allow to estimate 
+  linear (*lp_lin_iv*) and nonlinear (*lp_nl_iv*) impulse responses with local projections 
+  via an instrument variable approach as in, 
+  e.g., [Ramey and Zubairy (2018)](https://www.journals.uchicago.edu/doi/10.1086/696277).
+  
+* All functions now allow to manually choose the number of cores.
+
+* One input name in *lp_nl* has been changed for consistency:
+
+function | old input name | new input name
+:--------|:-------------- |
+`lp_nl`  | `hp_filter`    | `use_hp`
 
 
 
@@ -39,7 +62,7 @@ Examples can be found [here.](https://adaemmerp.github.io/lpirfs/README_docs.htm
 
 ## Installation
 
-You can install the released version of **lpirfs** from [CRAN](https://CRAN.R-project.org) with:
+You can install the released version (0.1.1) of **lpirfs** from [CRAN](https://CRAN.R-project.org) with:
 
 ``` r
 install.packages("lpirfs")
@@ -62,14 +85,21 @@ Yo can then install the package via *devtools::install_github("AdaemmerP/lpirfs"
 
 
 ## Acknowledgements
-I greatly benefit from the profound *R*, *Rcpp* and *GitHub* knowledge of Philipp [Wittenberg](https://github.com/wittenberg) and Detlef (overflow) [Steuer](https://github.com/dsteuer). Remaining errors are obviously mine. 
+I am thankful to Òscar [Jordà](https://sites.google.com/site/oscarjorda/) for encouraging comments and helpful suggestions. I am also indebted to Sarah [Zubairy](https://sites.google.com/site/sarahzubairy/) for providing their Matlab code before the publication of their 
+[paper](https://www.journals.uchicago.edu/doi/10.1086/696277). 
+
+I greatly benefit from the profound *R*, *Rcpp* and *GitHub* knowledge of Philipp [Wittenberg](https://github.com/wittenberg) and Detlef (overflow) [Steuer](https://github.com/dsteuer).
+Last but not least, I am grateful to Philipp Dybowski for his rogorous comments and without whom I would have 
+never started this project.
+
+All remaining errors are obviously mine. 
 
 ## Development
-I intend to extend the package with functions that
+I would be very grateful for feedback on the package.
+
+I intend to further extend the package with functions that
 
 * allow to manually identify the linear combinations of the reduced form residuals,
-* allow to include exogenous variables,
-* conduct IV-lp estimation,
 * conduct panel-lp estimation.
 
 
