--- a/README.Rmd
+++ b/README.Rmd
@@ -26,9 +26,9 @@ with local projections by [Jordà (2005)](https://www.aeaweb.org/articles?id=10.
 
 ## Main features
 
-- Estimates linear and nonlinear impulse responses with local projections and .
+- Estimates linear and nonlinear impulse responses with local projections.
 - Estimates linear and nonlinear impulse responses with local projections and
-  instrument variable approach (development version).
+  instrument variable approach (in the development version).
 - Functions to plot linear and nonlinear impulse responses.
 - Functions are partly implemented in *Rcpp* and *RcppArmadillo* to improve efficiency.
 - High performance with parallel computation.
@@ -38,8 +38,8 @@ with local projections by [Jordà (2005)](https://www.aeaweb.org/articles?id=10.
   The version on CRAN (0.1.1) chooses lags based on linear data and not on 
   nonlinear lagged data.
 
-* All functions now allow to include (lagged) exogenous variables and variables 
-  with exogenous data with contemporaneous impact. 
+* All functions now allow to include (lagged) exogenous data and data 
+  with with contemporaneous impact. 
 
 * Two new functions allow to estimate 
   linear (*lp_lin_iv*) and nonlinear (*lp_nl_iv*) impulse responses with local projections 
@@ -51,7 +51,7 @@ with local projections by [Jordà (2005)](https://www.aeaweb.org/articles?id=10.
 * One input name in *lp_nl* has been changed for consistency:
 
 function | old input name | new input name
-:--------|:-------------- |
+:--------|:-------------- | :-------------- 
 `lp_nl`  | `hp_filter`    | `use_hp`
 
 
@@ -89,14 +89,13 @@ I am thankful to Òscar [Jordà](https://sites.google.com/site/oscarjorda/) for 
 [paper](https://www.journals.uchicago.edu/doi/10.1086/696277). 
 
 I greatly benefit from the profound *R*, *Rcpp* and *GitHub* knowledge of Philipp [Wittenberg](https://github.com/wittenberg) and Detlef (overflow) [Steuer](https://github.com/dsteuer).
-Last but not least, I am grateful to Philipp Dybowski for his rogorous comments and without whom I would have 
+Last but not least, I am grateful to Philipp Dybowski for his rigorous comments and without whom I would have 
 never started this project.
 
 All remaining errors are obviously mine. 
 
 ## Development
-I would be very grateful for feedback on the package.
-
+I am grateful for helpful comments and suggestions on the package.
 I intend to further extend the package with functions that
 
 * allow to manually identify the linear combinations of the reduced form residuals,
