--- a/README.Rmd
+++ b/README.Rmd
@@ -35,24 +35,28 @@ with local projections by [Jordà (2005)](https://www.aeaweb.org/articles?id=10.
 
 ## Updates and new features in the development version 
 * Fixed an error in *lp_nl* when the number of lags is chosen by a lag length criterion. 
-  The version on CRAN (0.1.1) chooses lags based on linear data and not on 
+  The version on CRAN (0.1.1) chooses lags based on linear data instead of
   nonlinear lagged data.
 
 * All functions now allow to include (lagged) exogenous data and data 
-  with with contemporaneous impact. 
+  with contemporaneous impact. 
 
 * Two new functions allow to estimate 
   linear (*lp_lin_iv*) and nonlinear (*lp_nl_iv*) impulse responses with local projections 
-  via an instrument variable approach as in, 
+  via instrument variables as in, 
   e.g., [Ramey and Zubairy (2018)](https://www.journals.uchicago.edu/doi/10.1086/696277).
   
 * All functions now allow to manually choose the number of cores.
 
-* One input name in *lp_nl* has been changed for consistency:
+* Some input names in *lp_lin* and *lp_nl* have been changed for consistency:
 
 function | old input name | new input name
-:--------|:-------------- | :-------------- 
+:--------|:-------------  |:------------- 
+`lp_lin` | `lags_lin`     | `lags_endog_lin`
+`lp_nl`  | `lags_lin`     | `lags_endog_lin`
+`lp_nl`  | `lags_nl`      | `lags_endog_nl`
 `lp_nl`  | `hp_filter`    | `use_hp`
+
 
 
 
@@ -85,7 +89,7 @@ Yo can then install the package via *devtools::install_github("AdaemmerP/lpirfs"
 
 
 ## Acknowledgements
-I am thankful to Òscar [Jordà](https://sites.google.com/site/oscarjorda/) for encouraging comments and helpful suggestions. I am also indebted to Sarah [Zubairy](https://sites.google.com/site/sarahzubairy/) for providing their Matlab code before the publication of their 
+I am thankful to Òscar [Jordà](https://sites.google.com/site/oscarjorda/) for encouraging comments and helpful suggestions. I am also indebted to Sarah [Zubairy](https://sites.google.com/site/sarahzubairy/) for providing the Matlab code before the publication of this 
 [paper](https://www.journals.uchicago.edu/doi/10.1086/696277). 
 
 I greatly benefit from the profound *R*, *Rcpp* and *GitHub* knowledge of Philipp [Wittenberg](https://github.com/wittenberg) and Detlef (overflow) [Steuer](https://github.com/dsteuer).
@@ -96,7 +100,7 @@ All remaining errors are obviously mine.
 
 ## Development
 I am grateful for helpful comments and suggestions on the package.
-I intend to further extend the package with functions that
+I intend to further extend it with functions that
 
 * allow to manually identify the linear combinations of the reduced form residuals,
 * conduct panel-lp estimation.
