--- a/README.Rmd
+++ b/README.Rmd
@@ -28,7 +28,7 @@ with local projections by [Jordà (2005)](https://www.aeaweb.org/articles?id=10.
 
 - Estimates linear and nonlinear impulse responses with local projections.
 - Estimates linear and nonlinear impulse responses with local projections and
-  instrument variable (development version).
+  instrument variables (development version).
 - Functions to plot linear and nonlinear impulse responses.
 - Functions are partly implemented in *Rcpp* and *RcppArmadillo* to improve efficiency.
 - High performance with parallel computation.
@@ -89,7 +89,7 @@ Yo can then install the package via *devtools::install_github("AdaemmerP/lpirfs"
 
 
 ## Acknowledgements
-I am thankful to Òscar [Jordà](https://sites.google.com/site/oscarjorda/) for encouraging comments and helpful suggestions. I am also indebted to Sarah [Zubairy](https://sites.google.com/site/sarahzubairy/) for providing the Matlab code before the publication of this 
+I am thankful to Òscar [Jordà](https://sites.google.com/site/oscarjorda/) for encouraging comments and helpful suggestions. I am also indebted to Sarah [Zubairy](https://sites.google.com/site/sarahzubairy/) for providing the Matlab code before the publication of their 
 [paper](https://www.journals.uchicago.edu/doi/10.1086/696277). 
 
 I greatly benefit from the profound *R*, *Rcpp* and *GitHub* knowledge of Philipp [Wittenberg](https://github.com/wittenberg) and Detlef (overflow) [Steuer](https://github.com/dsteuer).
@@ -99,8 +99,7 @@ never started this project.
 All remaining errors are obviously mine. 
 
 ## Development
-I am grateful for helpful comments and suggestions on the package.
-I intend to further extend it with functions that
+I intend to further extend the package with functions that
 
 * allow to manually identify the linear combinations of the reduced form residuals,
 * conduct panel-lp estimation.
