--- a/README.Rmd
+++ b/README.Rmd
@@ -4,11 +4,11 @@ output: github_document
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
-<!-- # lpirfs [![CRAN Version](https://www.r-pkg.org/badges/version/lpirfs)](https://CRAN.R-project.org/package=lpirfs) -->
-<!-- [![Downloads](https://cranlogs.r-pkg.org/badges/lpirfs)](https://CRAN.R-project.org/package=lpirfs) -->
-<!--[![Total Downloads](https://cranlogs.r-pkg.org/badges/grand-total/lpirfs?color=orange)](https://CRAN.R-project.org/package=lpirfs) -->
-<!--[![Build Status](https://travis-ci.com/AdaemmerP/lpirfs.svg)](https://travis-ci.com/AdaemmerP/lpirfs)  -->
-<!--[![Coverage Status](https://codecov.io/gh/adaemmerp/lpirfs/graph/badge.svg)](https://codecov.io/github/adaemmerp/lpirfs?branch=master) -->
+# lpirfs [![CRAN Version](https://www.r-pkg.org/badges/version/lpirfs)](https://CRAN.R-project.org/package=lpirfs) 
+[![Build Status](https://travis-ci.com/AdaemmerP/lpirfs.svg)](https://travis-ci.com/AdaemmerP/lpirfs) 
+[![Downloads](https://cranlogs.r-pkg.org/badges/lpirfs)](https://CRAN.R-project.org/package=lpirfs) 
+[![Total Downloads](https://cranlogs.r-pkg.org/badges/grand-total/lpirfs?color=orange)](https://CRAN.R-project.org/package=lpirfs) 
+[![Coverage Status](https://codecov.io/gh/adaemmerp/lpirfs/graph/badge.svg)](https://codecov.io/github/adaemmerp/lpirfs?branch=master) 
 
 ```{r setup, include = FALSE}
 knitr::opts_chunk$set(
@@ -28,45 +28,14 @@ with local projections by [Jordà (2005)](https://www.aeaweb.org/articles?id=10.
 
 - Estimates linear and nonlinear impulse responses with local projections.
 - Estimates linear and nonlinear impulse responses with local projections and
-  instrument variables (development version).
+  identified shock (instrument variable approach).
 - Functions to plot linear and nonlinear impulse responses.
 - Functions are partly implemented in *Rcpp* and *RcppArmadillo* to improve efficiency.
 - High performance with parallel computation.
 
-## Updates and new features in the development version 
-* Fixed an error in *lp_nl* when the number of lags is chosen by a lag length criterion. 
-  The version on CRAN (0.1.1) chooses lags based on linear data instead of
-  nonlinear lagged data.
-
-* All functions now allow to include (lagged) exogenous data and data 
-  with contemporaneous impact. 
-
-* Two new functions allow to estimate 
-  linear (*lp_lin_iv*) and nonlinear (*lp_nl_iv*) impulse responses with local projections 
-  via instrument variables as in, 
-  e.g., [Ramey and Zubairy (2018)](https://www.journals.uchicago.edu/doi/10.1086/696277).
-  
-* All functions now allow to manually choose the number of cores.
-
-* Some input names in *lp_lin* and *lp_nl* have been changed for consistency:
-
-function | old input name | new input name
-:--------|:-------------  |:------------- 
-`lp_lin()` | `lags_lin`     | `lags_endog_lin`
-`lp_nl()`  | `lags_lin`     | `lags_endog_lin`
-`lp_nl()`  | `lags_nl`      | `lags_endog_nl`
-`lp_nl()`  | `hp_filter`    | `use_hp`
-
-
-
-
-## Examples
-Examples can be found [here.](https://adaemmerp.github.io/lpirfs/README_docs.html)
-
-
 ## Installation
 
-You can install the released version (0.1.1) of **lpirfs** from [CRAN](https://CRAN.R-project.org) with:
+You can install the released version of **lpirfs** from [CRAN](https://CRAN.R-project.org):
 
 ``` r
 install.packages("lpirfs")
@@ -87,6 +56,9 @@ On macOS you need the Clang 6.x compiler and the GNU Fortran compiler from [macO
 Having installed the compilers, you need to open a terminal and start R via 'PATH=/usr/local/clang6/bin:$PATH R'. 
 Yo can then install the package via *devtools::install_github("AdaemmerP/lpirfs")*
 
+## How to use 
+Examples can be found [here.](https://adaemmerp.github.io/lpirfs/README_docs.html)
+
 
 ## Acknowledgements
 I am thankful to Òscar [Jordà](https://sites.google.com/site/oscarjorda/) for encouraging comments and helpful suggestions. I am also indebted to Sarah [Zubairy](https://sites.google.com/site/sarahzubairy/) for providing the Matlab code before the publication of their 
@@ -99,10 +71,7 @@ never started this project.
 All remaining errors are obviously mine. 
 
 ## Development
-I intend to further extend the package with functions that
-
-* allow to manually identify the linear combinations of the reduced form residuals,
-* conduct panel-lp estimation.
+I intend to further extend the package with functions that enable to conduct panel-lp estimation.
 
 
 ### Author
